ventana de equipos conectada a base de datos, con status y funcional

--- a/html/Inicioo.html
+++ b/html/Inicioo.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-   <link rel="stylesheet" href="/css/inicio.css" />
+   <link rel="stylesheet" href="../css/inicio.css" />
 </head>
 <body>
     <header>
          <a class="logo-class" href="#">
-      <img src="/img/logo_canchas.png" alt="Logo de pagina">
+      <img src="../img/logo_canchas.png" alt="Logo de pagina">
     </a>
     </header>
     <main>
@@ -325,6 +325,6 @@
         © 2025 Canchibol - Todos los derechos reservados
     </footer>
 
-    <script src="/javascript/inicio.js"></script>
+    <script src="../javascript/inicio.js"></script>
 </body>
 </html>
