--- a/html/admin.html
+++ b/html/admin.html
@@ -50,11 +50,11 @@
       </select>
       <select name="equipo1" required>
         <option value="">Seleccione equipo 1</option>
-        <!-- Se llenará automáticamente desde JavaScript -->
+        <!-- se cargaran los equipos desde una funcion js -->
       </select>
       <select name="equipo2" required>
         <option value="">Seleccione equipo 2</option>
-        <!-- Se llenará automáticamente desde JavaScript -->
+        <!-- se cargaran los equipos desde una funcion js -->
       </select>
       <button type="submit">Guardar</button>
     </form>
@@ -77,7 +77,7 @@
   </section>
 
   
-  <script src="../javascript/calendario.js"></script>
+  <script src="../javascript/partidos.js"></script>
   
 
 </body>
