login y registro funcional y conectado a BD

--- a/html/Inicioo.html
+++ b/html/Inicioo.html
@@ -17,7 +17,7 @@
             <h2>Bienvenido a</h2>
             <h1>CANCHIBOL</h1>
             <div class="botones">
-                <a href="../html/Loginn.html" class="btn">Iniciar sesión</a>
+                <a href="../html/Login.html" class="btn">Iniciar sesión</a>
                 <a href="../html/Registro.html" class="btn">Registrarse</a>
             </div>
         </div>
