--- a/html/Registro.html
+++ b/html/Registro.html
@@ -41,12 +41,12 @@
       <button type="submit" class="btn-register">Registrarse</button>
 
       <div class="login-link">
-        ¿Ya tienes una cuenta? <a href="../html/Loginn.html">Inicia sesión</a>
+        ¿Ya tienes una cuenta? <a href="../html/Login.html">Inicia sesión</a>
       </div>
     </form>
   </div>
 
-  <script src="../javascript/registro.js"> </script>
+  <script src="../javascript/registroo.js"> </script>
 
 </body>
 </html>
