bug de arbitros arreglado

--- a/html/arbitros.html
+++ b/html/arbitros.html
@@ -41,7 +41,7 @@
         <button id="btnAlternarVistaArbitros" class="btn-toggle">
           Eliminado recientemente
         </button>
-        <span id="contadorArbitrosDesactivados"></span>
+        <span id="contadorDesactivados"></span>
       </div>
     </div>
 
@@ -79,7 +79,7 @@
     </div>
   </section>
 
-  <script src="../javascript/gestionArbitro.js"></script>
+  <script src="../javascript/arbitros.js"></script>
 
 
 
