--- a/html/equipos.html
+++ b/html/equipos.html
@@ -69,7 +69,7 @@
         </table>
     </section>
 
-    <script src="../javascript/equipos.js"></script>
+    <script src="../javascript/equipo.js"></script>
 
 </body>
 
