implementacion de pantalla de carga en login y registro

--- a/html/Login.html
+++ b/html/Login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión</title>
     <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/pantalla-carga.css">
 </head>
 
 <body>
@@ -33,6 +34,13 @@
             </div>
         </form>
     </div>
+
+    <div class="pantalla-carga" id="pantallaCarga">
+    <div class="contenido-carga">
+        <h3 class="mensaje-bienvenida" id="mensajeBienvenida">¡Bienvenido al sistema de Canchibol!</h3>
+        <div class="spinner"></div>
+    </div>
+</div>
 
     <script src="../javascript/loginn.js"></script>
 
