--- a/html/Registro.html
+++ b/html/Registro.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/registro.css">
+  <link rel="stylesheet" href="../css/pantalla-carga.css">
   <title>Registro</title>
 </head>
 
@@ -46,7 +47,14 @@
     </form>
   </div>
 
-  <script src="../javascript/registroo.js"> </script>
+  <div class="pantalla-carga" id="pantallaCarga">
+    <div class="contenido-carga">
+      <h3 class="mensaje-bienvenida" id="mensajeRegistro">Bienvenido a Canchibol</h3>
+      <div class="spinner"></div>
+    </div>
+  </div>
+
+  <script src="../javascript/registro.js"> </script>
 
 </body>
 </html>
